# Agents_article

./: README.md  pyproject.toml
src/agent_article/: crew.py  main.py
src/agent_article/config/: tasks.yaml
webportcrew/: README.md  pyproject.toml
webportcrew/src/webportcrew/: crew.py  main.py
webportcrew/src/webportcrew/config/: agents.yaml
