[tool.poetry]
name = "agent_article"
version = "0.1.0"
description = "agent_article using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
agent_article = "agent_article.main:run"
run_crew = "agent_article.main:run"
train = "agent_article.main:train"
replay = "agent_article.main:replay"
test = "agent_article.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
