[tool.poetry]
name = "webportcrew"
version = "0.1.0"
description = "webportcrew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
webportcrew = "webportcrew.main:run"
run_crew = "webportcrew.main:run"
train = "webportcrew.main:train"
replay = "webportcrew.main:replay"
test = "webportcrew.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
